Lets write logs with Logger instead of direct console. This way we will have the timestamps. Adds also a uuid to each log entry for easier traceability of requests.